Cleaned up styleCreate.css and fixed overflow issue

--- a/public/css-lul/styleCreate.css
+++ b/public/css-lul/styleCreate.css
@@ -1,11 +1,7 @@
 body{
     height: 100vh;
-    width: 100%;
-    background-color: #EFF2F1;
-}
-
-body{
     margin: 0;
+    overflow-y: auto;
     padding: 0;
     background-color: #e5e5f7;
     opacity: 87%;
@@ -13,14 +9,18 @@ body{
     background-size: 10px 10px;
 }
 
+.flexContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .createForm{
+    position: relative;
     width: 410px;
-    padding: 30px;
+    padding: 15px 30px 15px;
+    margin: 15px 0 15px;
     box-shadow: 0 0 8px rgba(0, 0, 0, .4);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
     color: #EFF2F1;
     font-family: 'Prompt';
     opacity: 87%;
@@ -44,10 +44,6 @@ body{
 .createForm .text{
     font-size: 40px;
     text-align: center;
-}
-
-.createForm form{
-    margin-top: -30px;
 }
 
 .createForm form .data{
@@ -99,40 +95,13 @@ form .data input {
     text-align: center;
 }
 
-form .data .passrq label {
-    font-size: 75%;
-    opacity: 0.8;
-    margin-bottom: 10px; /* Add margin to create a gap */
-}
-
-
-form .create-account{
-    margin: 25px 0;
-    height: 45px;
-    width: 101%;
-    position: relative;
-    overflow: hidden;
-    border-radius: 15px;
-}
-
-form .create-account .create{
-    height: 100%;
-    width: 300%;
-    position: absolute;
-    left: -100%;
-    z-index: -1;
-    background: #fa7921;
-}
-
-form .create-account button:hover{
-    background: #7353ba;
-}
-
-form .create-account button{
-    height: 100%;
+#createButton {
+    height: 3rem;
     width: 100%;
-    background: none;
+    margin: 20px 0 20px;
+    background: #fa7921;
     border: none;
+    border-radius: 15px;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
@@ -142,13 +111,6 @@ form .create-account button{
     font-family: 'Black Ops One', cursive;
 }
 
-form .checkbox{
-    padding-top: 10px;
-    padding-left: 6px;
-}
-
-form .checkbox a{
-    text-decoration: none;
-    font-size: 15px;
-    color: hsl(214, 100%, 56%)
+#createButton:hover {
+    background: #7353ba;
 }
